cluster/apps/frigate/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: frigate
  namespace: frigate
subsets:
  - addresses:
      - ip: 192.168.68.101
    ports:
      - name: http
        port: 5000
        protocol: TCP
