cluster/apps/frigate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: frigate
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: 5000
